got layout of module planned

--- a/Manual/Template Manual/HTML/Module Name.html
+++ b/Manual/Template Manual/HTML/Module Name.html
@@ -44,7 +44,7 @@
                     <li>Finally, pink tiles. They don't do anything. Step on them all you like.</li>
                 </ul>
 
-                    <p>*Killing a monster is done by waiting for the white bar to reach the center. The closer to the center you click, the more damage it will do. Some monsters have more health than other, which will cause multiple turns to kill.</p>
+                    <p>*Click on the cell you are on to start an encounter. Killing a monster is done by waiting for the white bar to reach the center. The closer to the center you click, the more damage it will do. Some monsters have more health than other, which will need multiple turns to kill.</p>
 
                     <p>**Getting bit will cause a strike, but will keep you at your current position.</p>
             </div>
