Recursion seems like the only way

--- a/Manual/Template Manual/HTML/Module Name.html
+++ b/Manual/Template Manual/HTML/Module Name.html
@@ -55,7 +55,7 @@
             <li>Finally, pink tiles. They don't do anything. Step on them all you like.</li>
           </ul>
 
-          <p>*Getting bit will cause a strike, but will keep you at your current position.</p>
+          <p>*Getting bit will cause a strike, and put you at the position you were at before.</p>
 
           <p>**If you slide you way onto a red tile, a strike will occur, and the module will reset.</p>
 
