Added interactability to all colors except green

--- a/Manual/HTML/Module Name.html
+++ b/Manual/HTML/Module Name.html
@@ -48,16 +48,13 @@
             <li>Orange tiles are orange scented. They will make you smell delicious!</li>
             <li>Blue tiles are water tiles. If you smell like oranges, the pirahnas will bite you*.</li>
             <li>Purple tiles are slippery! You will slide to the next tile**. However, the slippery soap smells like lemons!!! Which pirahnas do not like.</li>
-            <li>
-              Green tiles don't do anything when you step on them, but to move to another tile, you must solve a non-ignored module. If there are no non-ignored modules left, you must kill a
-              monster***.
-            </li>
+            <li>Green tiles don't do anything when you step on them, but to move to another tile, you must kill a monster***.</li>
             <li>Finally, pink tiles. They don't do anything. Step on them all you like.</li>
           </ul>
 
-          <p>*Getting bit will cause a strike, and put you at the position you were at before.</p>
+          <p>*Getting bit will cause a strike, and move you at the position you were at before.</p>
 
-          <p>**If you slide you way onto a red tile, a strike will occur, and the module will reset.</p>
+          <p>**If you slide your way onto a red tile, a strike will occur, and the module will reset.</p>
 
           <p>
             ***Click on the cell you are on to start an encounter. Killing a monster is done by waiting for the white bar to reach the center. The closer to the center you click, the more damage it will do. Some monsters have more health than other, which will need multiple turns to kill.
