added boolean that toggles debug lines

--- a/Manual/HTML/Module Name.html
+++ b/Manual/HTML/Module Name.html
@@ -48,7 +48,7 @@
             <li>Orange tiles are orange scented. They will make you smell delicious!</li>
             <li>Blue tiles are water tiles. If you smell like oranges, the pirahnas will bite you*.</li>
             <li>Purple tiles are slippery! You will slide to the next tile**. However, the slippery soap smells like lemons!!! Which pirahnas do not like.</li>
-            <li>Green tiles don't do anything when you step on them, but to move to another tile, you must kill a monster***.</li>
+            <li>Green tiles will start an encounter with a monster that you must kill***.</li>
             <li>Finally, pink tiles. They don't do anything. Step on them all you like.</li>
           </ul>
 
@@ -57,7 +57,7 @@
           <p>**If you slide your way onto a red tile, a strike will occur, and the module will reset.</p>
 
           <p>
-            ***Click on the cell you are on to start an encounter. Killing a monster is done by waiting for the white bar to reach the center. The closer to the center you click, the more damage it will do. Some monsters have more health than other, which will need multiple turns to kill.
+            ***Killing a monster is done by waiting for the white bar to reach the center and pressing space. The closer to the center you are, the more damage you will do.
           </p>
         </div>
         <div class="page-footer relative-footer">1</div>
