--- a/Manual/HTML/Papyrus Tiles.html
+++ b/Manual/HTML/Papyrus Tiles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1" />
-    <title>Module Name — Keep Talking and Nobody Explodes Module</title>
+    <title>Papyrus Tiles — Keep Talking and Nobody Explodes Module</title>
     <link rel="stylesheet" type="text/css" href="css/font.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -26,6 +26,26 @@
         font-family: "Papyrus";
         src: local("PAPYRUS");
       }
+
+      div.hstack {
+
+        font-family: "Papyrus";
+        border-width:3px; 
+        border-style:solid;
+        border-color:#DDD;
+        padding: 1em;
+        margin-top: 7em;
+        text-align: justify;
+        background-color: #000;
+        color: #DDD;
+        display: flex;
+      }
+
+      img.pappy {
+        width: 10%;
+        margin-right: 1em;
+        margin-top: .5em;
+      }
     </style>
   </head>
   <body>
@@ -33,16 +53,16 @@
       <div class="page page-bg-01">
         <div class="page-header">
           <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-          <span class="page-header-section-title">Module Name</span>
+          <span class="page-header-section-title">Papyrus Tiles</span>
         </div>
         <div class="page-content">
-          <img src="img/Component/Module Name.svg" class="diagram" />
-          <h2>On the Subject of Module Name</h2>
+          <img src="img/Component/Papyrus Tiles.svg" class="diagram" />
+          <h2>On the Subject of Papyrus Tiles</h2>
           <p class="flavour-text">Which is harder: Jumble or Crosswords?</p>
-          <p class="pappy">
-            Greetings human! You're going to love this puzzle! It was made by the great Dr. Alphys! You see these tiles!? Each color has a different function! Start from the left of the grid and make
-            your way to the right.
-          </p>
+          <div class="hstack">
+            <img src="./img/Papyrus Tiles/head.png" class="pappy" alt="papyrus haed">
+            GREETINGS HUMAN! YOU'RE GOING TO LOVE THIS PUZZLE! IT WAS MADE BY THE GREAT DR. ALPHYS! YOU SEE THESE TILES!? EACH COLOR HAS A DIFFERENT FUNCTION! START FROM THE LEFT OF THE GRID AND MAKE YOUR WAY TO THE RIGHT.
+          </div>
           <ul>
             <li>Red tiles are impassable. You cannot walk on them.</li>
             <li>Orange tiles are orange scented. They will make you smell delicious!</li>
